recursion.cons.occurrences.Occurrences.scala.error
Erreur de compilation :
Occurrences:7: error: not found: value occurence
    return 1 + occurence(l.tail, v);
               ^Occurrences:10: error: not found: value occurence
    return 0 + occurence(l.tail, v);
               ^